# ThreadKit

./: .gitignore  CDN-USAGE-SUMMARY.md  CDN-USAGE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.docker.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  threadkit-project-notes.md
.github/workflows/: ci.yml  coverage.yml  release.yml
.storybook/: main.ts  preview.tsx
bench/: .gitignore  README.md  debug-hyvor.ts  debug-local-hyvor.ts  debug-threadkit.ts  find-demos.ts  measure-real-size.js  measure.ts  package.json  run.sh  test-actual-embeds.ts  tsconfig.json
bench/test-pages/: comentario.html  disqus.html  hyvor-talk.html  threadkit-styles.css  threadkit.html  threadkit.min.js
docs/: UI-POLISH-GUIDE.md  api.md  architecture.md  dashboard.md  redis.md  self-hosting.md
e2e/: README.md  package.json  playwright.config.ts
e2e/tests/: auth-oauth.spec.ts  commenting.spec.ts  realtime.spec.ts
examples/: README.md
examples/basic/: index.html  main.tsx  package.json
examples/kitchen-sink/: README.md  index.html  main.tsx  package.json
examples/local-server/: README.md  index.html  main.tsx  package.json
examples/nextjs-ssr/: next.config.ts  package.json
examples/nextjs-ssr/src/app/: comments-section.tsx  layout.tsx  page.tsx
examples/nextjs-ssr/src/lib/: api.ts
examples/react/: index.html  main.tsx  package.json  tsconfig.json
examples/shared/: ExampleLayout.tsx  SetupInstructions.tsx  data.json  package.json  plugin.ts
examples/svelte/: index.html  package.json  tsconfig.json  vite.config.ts
examples/svelte/src/: App.svelte
examples/vanilla/: README.md  index.html  main.js  package.json  vite.config.ts
examples/with-ethereum/: README.md  index.html  main.tsx  package.json
examples/with-i18n/: README.md  index.html  main.tsx  package.json
examples/with-latex/: README.md  index.html  main.tsx  package.json  vite.config.ts
examples/with-local-server/: index.html  main.tsx  package.json  tsconfig.json  vite.config.ts
examples/with-media-preview/: README.md  index.html  main.tsx  package.json
examples/with-solana/: README.md  index.html  main.tsx  package.json  vite.config.ts
examples/with-syntax-highlight/: README.md  index.html  main.tsx  package.json
examples/with-turnstile/: README.md  index.html  main.tsx  package.json  tsconfig.json
integrations/: README.md
integrations/wordpress/: .distignore  .env.example  .gitignore  .phpcs.xml.dist  README.md  STATUS.md  TODO.md  composer.json  docker-compose.yml  phpunit.xml.dist  threadkit.php
integrations/wordpress/.wordpress-org/: README.txt
integrations/wordpress/assets/: admin.css
integrations/wordpress/src/: class-threadkit.php
integrations/wordpress/src/Admin/: class-threadkit-admin.php  class-threadkit-settings.php
integrations/wordpress/src/Frontend/: class-threadkit-frontend.php
integrations/wordpress/templates/: comments.php
integrations/wordpress/test-site/: README.md  setup.sh
integrations/wordpress/tests/: bootstrap.php  test-frontend.php  test-settings.php  test-threadkit.php
scripts/: README.md  version.js
server/: .env.example  .env.loadtest  Cargo.toml  Dockerfile  README.md  TEST_COVERAGE_PLAN.md  dump.rdb  lcov.info  loadtest_users.json
server/crates/common/: Cargo.toml
server/crates/common/src/: action_log.rs  auth.rs  config.rs  error.rs  image_processing.rs  lib.rs  moderation.rs  redis.rs  storage.rs  types.rs  username.rs  web3.rs  web3_tests.rs
server/crates/common/tests/: atomic_vote_tests.rs
server/crates/http/: Cargo.toml  build.rs
server/crates/http/src/: extractors.rs  lib.rs  main.rs  middleware.rs  openapi.rs  state.rs
server/crates/http/src/routes/: admin.rs  auth.rs  comments.rs  media.rs  mod.rs  moderation.rs  turnstile.rs  users.rs  version.rs
server/crates/http/tests/: auth_tests.rs  comment_tests.rs  extractor_tests.rs  gdpr_tests.rs  media_tests.rs  moderation_tests.rs  rate_limit_tests.rs  turnstile_tests.rs
server/crates/http/tests/common/: mod.rs
server/crates/loadtest/: Cargo.toml
server/crates/loadtest/src/: main.rs
server/crates/websocket/: Cargo.toml  PLAN.md
server/crates/websocket/src/: batcher.rs  handler.rs  lib.rs  main.rs  messages.rs  pubsub.rs  state.rs
server/crates/websocket/tests/: connection_tests.rs  subscription_tests.rs
server/crates/websocket/tests/common/: mod.rs
server/deploy/: deploy.sh  nginx.conf  setup-vps.sh  threadkit-http.service  threadkit-ws.service
server/lua/: atomic_vote.lua
server/scripts/: flush-redis.sh  setup-minio.sh
