[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ThreadKit"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# WebSocket
tokio-tungstenite = "0.26"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
fred = { version = "10.0", features = ["subscriber-client", "enable-native-tls"] }

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Web3 signature verification
alloy-primitives = { version = "0.8", features = ["k256"] }
ed25519-dalek = "2.1"
bs58 = "0.5"

# Utilities
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
dashmap = "6.1"
moka = { version = "0.12", features = ["future"] }
rand = "0.8"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error tracking
sentry = "0.46"

# Metrics
metrics-exporter-prometheus = "0.16"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# HTTP client (for SaaS mode API calls)
reqwest = { version = "0.12", features = ["json"] }

# CLI (for admin tool)
clap = { version = "4.5", features = ["derive"] }

# Testing
tokio-test = "0.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
axum-test = "18"
fake = { version = "3.0", features = ["derive", "uuid", "chrono"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
