[package]
name = "threadkit-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
fred.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
rand.workspace = true
futures-util.workspace = true
utoipa.workspace = true
reqwest.workspace = true

# Web3 signature verification
alloy-primitives.workspace = true
ed25519-dalek.workspace = true
bs58.workspace = true
hex.workspace = true

# S3 storage
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true

# Image processing
image.workspace = true
webp.workspace = true
bytes.workspace = true
mime.workspace = true

[dev-dependencies]
tokio.workspace = true
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["redis"] }
