[package]
name = "threadkit-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
threadkit-common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
fred.workspace = true
jsonwebtoken.workspace = true
oauth2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
reqwest.workspace = true
dashmap.workspace = true
url = "2"
urlencoding = "2.1"
sha2.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true

[dev-dependencies]
tokio-test.workspace = true
axum-test.workspace = true
fake.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
