[package]
name = "threadkit-loadtest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
threadkit-common = { path = "../common" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
