[package]
name = "threadkit-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
threadkit-common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio-test.workspace = true
