[package]
name = "threadkit-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
threadkit-common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sentry.workspace = true
dashmap.workspace = true
chrono.workspace = true
fred.workspace = true
crossbeam-queue = "0.3"
libc = "0.2"

[dev-dependencies]
tokio-test.workspace = true
tokio-tungstenite = "0.24"
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["redis"] }
axum-test.workspace = true
